--- a/login/static/css/login.css
+++ b/login/static/css/login.css
@@ -91,8 +91,8 @@ i{
     color: #FFFFFF;
  }
  .login-btn:hover{
-    background: #DAD4B5;
-    color: #000;
+    background: #B83D3D;
+    color: #FFFFFF;
  }
 
 span a{
