added back button on the register page

--- a/register/static/css/register.css
+++ b/register/static/css/register.css
@@ -46,7 +46,17 @@ input:focus{
 } */
 
 
-
+.register-btn{
+    margin-top: 10px;
+    border: none;
+    outline: none;
+    height: 45px;
+    border-radius: 5px;
+    transition: .4s;
+    color: #FFFFFF;
+    text-align: center;
+    text-decoration: none;
+}
 
 
 
