--- a/register/templates/register.html
+++ b/register/templates/register.html
@@ -132,9 +132,13 @@
                     </div>
                    
                 </div>
-                <div class="col-12">
+                <div class="d-flex flex-row mb-3 gap-3">
+                 
                     <input type="submit" class="login-btn" value="Register">
+                    <a class="register-btn" value="Scan fingerprint to login" href="{% url 'login' %}">Back to login</a>
+       
                 </div>
+              
               </form>
         </div>
     </div>
