--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -24,8 +24,8 @@
                     </div>
                     
                 </div>
-
-                <div class="col-md-6 right">
+                <form action="{% url 'login' %}" method="post" class="col-md-6 right">
+                    {% csrf_token %}
                     
                     <div class="input-box">
                        
@@ -33,6 +33,10 @@
                        <div class="input-field fingerprint">
                             <img src="{% static 'images/fingerprint.png' %}" alt="" srcset="">
                         </div> 
+                        <div class="input-field">
+                            <input type="text" name="ref-num" class="form-control" placeholder="Enter Reference number">
+                       </div> 
+                       <br>
                        <div class="input-field">
                             <input type="submit" class="login-btn" value="Scan fingerprint to login">
                        </div> 
@@ -40,8 +44,8 @@
                             <a type="submit" class="register-btn" value="Scan fingerprint to login" href="{% url 'register' %}">Register</a>
                         </div> 
                     </div>  
-                </div>
-
+             
+                </form>
             </div>
         </div>
     </div>
